# SquidDB

./: CMakeLists.txt  LICENSE  Makefile  README.md  TODO  squiddb.conf
include/core/: IsolationLevel.h  KeyRowInfo.h  LockType.h  RowInfo.h  SkipList.h  SkipListIterator.h  SkipListNode.h  ThreadContext.h  ThreadContextManager.h  Transaction.h  TraverseContext.h
include/engine/: Index.h  Table.h  TableIterator.h
include/infra/: Queue.h  QueueNode.h
include/storage/: Column.h  FileManager.h  Protocol_v1_0.h  Schema.h  StreamFile.h
include/utils/: Configuration.h  DirectoryCleanup.h  FileCleanup.h  Logger.h  StringUtils.h
src/: main.cxx
src/core/: KeyRowInfo.cxx  RowInfo.cxx  SkipList.cxx  SkipListIterator.cxx  SkipListNode.cxx  ThreadContext.cxx  ThreadContextManager.cxx  Transaction.cxx  TraverseContext.cxx
src/engine/: Table.cxx
src/storage/: Column.cxx  FileManager.cxx  Schema.cxx  StreamFile.cxx
src/utils/: Configuration.cxx  Logger.cxx  StringUtils.cxx
tests/: FileManagerTest.cxx  SchemaTest.cxx  SkipListTest.cxx  TableTest.cxx  ThreadContextManagerTest.cxx
tests/integration/: InsertTest.cxx
tests/performance/: test_main.cxx
tests/unit/: TableTest.cxx
